--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,3 +33,7 @@
 .contactInput {
     @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40 hover:border-[#F7AB0A]/40
 }
+
+.slick-dots li.slick-active button:before{
+    color: #F7AB0A !important;
+}
